fix recover bug